--- a/Substation Builder/Substation Builder.csproj
+++ b/Substation Builder/Substation Builder.csproj
@@ -113,6 +113,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DataModel\DataModel.cs" />
     <Compile Include="Oneline.xaml.cs">
       <DependentUpon>Oneline.xaml</DependentUpon>
     </Compile>
@@ -197,8 +198,6 @@
   <ItemGroup>
     <Resource Include="Resources\Trash.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="T1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
