--- a/Substation Builder/Substation Builder.csproj
+++ b/Substation Builder/Substation Builder.csproj
@@ -117,6 +117,9 @@
     <Compile Include="Oneline.xaml.cs">
       <DependentUpon>Oneline.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Resources\XAML Pages\Transformer.xaml.cs">
+      <DependentUpon>Transformer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Resources\XAML Pages\Thevenin.xaml.cs">
       <DependentUpon>Thevenin.xaml</DependentUpon>
     </Compile>
@@ -142,6 +145,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Resources\Icons\IconsNonShared.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Resources\XAML Pages\Transformer.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
