--- a/Substation Builder/Substation Builder.csproj
+++ b/Substation Builder/Substation Builder.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\PostSharp.5.0.51\build\PostSharp.props" Condition="Exists('..\packages\PostSharp.5.0.51\build\PostSharp.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -14,6 +15,8 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <IsWebBootstrapper>false</IsWebBootstrapper>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -69,30 +72,6 @@
     <Reference Include="MahApps.Metro, Version=1.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.1.6.4\lib\net46\MahApps.Metro.dll</HintPath>
     </Reference>
-    <Reference Include="MahApps.Metro.IconPacks, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.2.2.0\lib\net46\MahApps.Metro.IconPacks.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.Entypo, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.Entypo.2.2.0\lib\net46\MahApps.Metro.IconPacks.Entypo.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.FontAwesome, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.FontAwesome.2.2.0\lib\net46\MahApps.Metro.IconPacks.FontAwesome.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.Material, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.Material.2.2.0\lib\net46\MahApps.Metro.IconPacks.Material.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.MaterialLight, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.MaterialLight.2.2.0\lib\net46\MahApps.Metro.IconPacks.MaterialLight.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.Modern, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.Modern.2.2.0\lib\net46\MahApps.Metro.IconPacks.Modern.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.Octicons, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.Octicons.2.2.0\lib\net46\MahApps.Metro.IconPacks.Octicons.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.SimpleIcons, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.SimpleIcons.2.2.0\lib\net46\MahApps.Metro.IconPacks.SimpleIcons.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -121,55 +100,58 @@
     <Compile Include="Helpers\EnumConverter.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Helpers\ViewModelBase.cs" />
-    <Compile Include="Model\Model.cs" />
+    <Compile Include="Model\Definitions.cs" />
     <Compile Include="Helpers\SystemIO.cs" />
-    <Compile Include="View\BreakerView.xaml.cs">
-      <DependentUpon>BreakerView.xaml</DependentUpon>
+    <Compile Include="Model\Substation.cs" />
+    <Compile Include="Pages\DatabaseView\BreakerPage.xaml.cs">
+      <DependentUpon>BreakerPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\CTMenuView.xaml.cs">
-      <DependentUpon>CTMenuView.xaml</DependentUpon>
+    <Compile Include="Pages\DatabaseView\CTMenuPage.xaml.cs">
+      <DependentUpon>CTMenuPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\CTView.xaml.cs">
-      <DependentUpon>CTView.xaml</DependentUpon>
+    <Compile Include="Pages\DatabaseView\CTPage.xaml.cs">
+      <DependentUpon>CTPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\FaultViewModel.cs" />
+    <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="View\DatabaseView.xaml.cs">
       <DependentUpon>DatabaseView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\DefaultView.xaml.cs">
-      <DependentUpon>DefaultView.xaml</DependentUpon>
+    <Compile Include="Pages\DatabaseView\DefaultPage.xaml.cs">
+      <DependentUpon>DefaultPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\FaultViewModel.xaml.cs">
-      <DependentUpon>FaultViewModel.xaml</DependentUpon>
+    <Compile Include="View\FaultView.xaml.cs">
+      <DependentUpon>FaultView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\RelayView.xaml.cs">
-      <DependentUpon>RelayView.xaml</DependentUpon>
+    <Compile Include="Pages\DatabaseView\RelayPage.xaml.cs">
+      <DependentUpon>RelayPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\SubstationView.xaml.cs">
-      <DependentUpon>SubstationView.xaml</DependentUpon>
+    <Compile Include="Pages\DatabaseView\SubstationPage.xaml.cs">
+      <DependentUpon>SubstationPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Transformer2View.xaml.cs">
-      <DependentUpon>Transformer2View.xaml</DependentUpon>
+    <Compile Include="Pages\DatabaseView\Transformer2Page.xaml.cs">
+      <DependentUpon>Transformer2Page.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\TransformerView.xaml.cs">
-      <DependentUpon>TransformerView.xaml</DependentUpon>
+    <Compile Include="Pages\DatabaseView\TransformerPage.xaml.cs">
+      <DependentUpon>TransformerPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\TheveninView.xaml.cs">
-      <DependentUpon>TheveninView.xaml</DependentUpon>
+    <Compile Include="Pages\DatabaseView\TheveninPage.xaml.cs">
+      <DependentUpon>TheveninPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\DatabaseViewModel.cs" />
-    <Page Include="View\BreakerView.xaml">
+    <Page Include="Pages\DatabaseView\BreakerPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\CTMenuView.xaml">
+    <Page Include="Pages\DatabaseView\CTMenuPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\CTView.xaml">
+    <Page Include="Pages\DatabaseView\CTPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\FaultViewModel.xaml">
+    <Page Include="View\FaultView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -197,27 +179,27 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\DefaultView.xaml">
+    <Page Include="Pages\DatabaseView\DefaultPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\RelayView.xaml">
+    <Page Include="Pages\DatabaseView\RelayPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\SubstationView.xaml">
+    <Page Include="Pages\DatabaseView\SubstationPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Transformer2View.xaml">
+    <Page Include="Pages\DatabaseView\Transformer2Page.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\TransformerView.xaml">
+    <Page Include="Pages\DatabaseView\TransformerPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\TheveninView.xaml">
+    <Page Include="Pages\DatabaseView\TheveninPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -249,7 +231,9 @@
     <None Include="Substation Builder_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\MainPageIcon.jpg" />
@@ -292,4 +276,12 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\PostSharp.5.0.51\build\PostSharp.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PostSharp.5.0.51\build\PostSharp.props'))" />
+    <Error Condition="!Exists('..\packages\PostSharp.5.0.51\build\PostSharp.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\PostSharp.5.0.51\build\PostSharp.targets'))" />
+  </Target>
+  <Import Project="..\packages\PostSharp.5.0.51\build\PostSharp.targets" Condition="Exists('..\packages\PostSharp.5.0.51\build\PostSharp.targets')" />
 </Project>
