--- a/Substation Builder/Substation Builder.csproj
+++ b/Substation Builder/Substation Builder.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Pages\DatabaseView\CTPage.xaml.cs">
       <DependentUpon>CTPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Resources\Monster\Monster.cs" />
     <Compile Include="ViewModel\FaultViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="View\DatabaseView.xaml.cs">
@@ -276,6 +277,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\HikoOri.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\CT.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
