--- a/Substation Builder/Substation Builder.csproj
+++ b/Substation Builder/Substation Builder.csproj
@@ -101,10 +101,15 @@
     <Compile Include="Helpers\BindingProxy.cs" />
     <Compile Include="Helpers\Enum.cs" />
     <Compile Include="Helpers\EnumConverter.cs" />
+    <Compile Include="Helpers\IsWindowOpen.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Helpers\ViewModelBase.cs" />
+    <Compile Include="Model\Connector.cs" />
     <Compile Include="Model\Definitions.cs" />
     <Compile Include="Helpers\SystemIO.cs" />
+    <Compile Include="Model\DiagramObject.cs" />
+    <Compile Include="Model\Node.cs" />
+    <Compile Include="Model\NodesDataSource.cs" />
     <Compile Include="Model\Substation.cs" />
     <Compile Include="Pages\DatabaseView\BreakerPage.xaml.cs">
       <DependentUpon>BreakerPage.xaml</DependentUpon>
@@ -115,9 +120,22 @@
     <Compile Include="Pages\DatabaseView\CTPage.xaml.cs">
       <DependentUpon>CTPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pages\OnelineView\ButtonsPanel.xaml.cs">
+      <DependentUpon>ButtonsPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\OnelineView\ConnectorPropertyEditor.xaml.cs">
+      <DependentUpon>ConnectorPropertyEditor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\OnelineView\NodePropertyEditor.xaml.cs">
+      <DependentUpon>NodePropertyEditor.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\OnelineView\ParametersEditor.xaml.cs">
+      <DependentUpon>ParametersEditor.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Resources\Monster\Monster.cs" />
     <Compile Include="ViewModel\FaultViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="ViewModel\OnelineViewModel.cs" />
     <Compile Include="View\DatabaseView.xaml.cs">
       <DependentUpon>DatabaseView.xaml</DependentUpon>
     </Compile>
@@ -143,6 +161,9 @@
       <DependentUpon>TheveninPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\DatabaseViewModel.cs" />
+    <Compile Include="View\OnelineView.xaml.cs">
+      <DependentUpon>OnelineView.xaml</DependentUpon>
+    </Compile>
     <Page Include="Pages\DatabaseView\BreakerPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -152,6 +173,26 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\DatabaseView\CTPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OnelineView\ButtonsPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OnelineView\ConnectorPropertyEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OnelineView\EditorStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OnelineView\NodePropertyEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\OnelineView\ParametersEditor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -204,6 +245,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Pages\DatabaseView\TheveninPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\OnelineView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -273,14 +318,12 @@
     <Resource Include="Resources\Images\Chiyome_Mochizuki.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\Bisque_Doll.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\Images\HikoOri.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\CT.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
