--- a/Substation Builder/Substation Builder_qocn55kh_wpftmp.csproj
+++ b/Substation Builder/Substation Builder_qocn55kh_wpftmp.csproj
@@ -66,38 +66,8 @@
     <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ControlzEx, Version=3.0.2.4, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ControlzEx.3.0.2.4\lib\net45\ControlzEx.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro, Version=1.6.5.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.1.6.5\lib\net46\MahApps.Metro.dll</HintPath>
-    </Reference>
-    <Reference Include="MahApps.Metro.IconPacks.Entypo, Version=2.2.0.12, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\MahApps.Metro.IconPacks.Entypo.2.2.0\lib\net46\MahApps.Metro.IconPacks.Entypo.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\ControlzEx.3.0.2.4\lib\net45\System.Windows.Interactivity.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xaml">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="WindowsBase" />
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
     <Compile Include="Helpers\BindingProxy.cs" />
     <Compile Include="Helpers\Enum.cs" />
     <Compile Include="Helpers\EnumConverter.cs" />
@@ -128,6 +98,9 @@
     <Compile Include="ViewModel\FaultViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="ViewModel\OnelineViewModel.cs" />
+    <Compile Include="View\DatabaseView.xaml.cs">
+      <DependentUpon>DatabaseView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\FaultView.xaml.cs">
       <DependentUpon>FaultView.xaml</DependentUpon>
     </Compile>
@@ -143,37 +116,10 @@
     <Compile Include="Pages\DatabaseView\TheveninPage.xaml.cs">
       <DependentUpon>TheveninPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\DatabaseViewModel.cs" />
     <Compile Include="View\OnelineView.xaml.cs">
       <DependentUpon>OnelineView.xaml</DependentUpon>
     </Compile>
-    <Page Include="Pages\DatabaseView\BreakerPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\DatabaseView\CTPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\OnelineView\ButtonsPanel.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\OnelineView\ConnectorPropertyEditor.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\OnelineView\ParametersEditor.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\FaultView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\MainWindowView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -182,34 +128,6 @@
       <DependentUpon>MainWindowView.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Resources\Icons\Icons.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Resources\Icons\IconsNonShared.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pages\DatabaseView\RelayPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\DatabaseView\SubstationPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Pages\DatabaseView\TransformerPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pages\DatabaseView\TheveninPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="View\OnelineView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -235,7 +153,6 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <Resource Include="Resources\Icons\Diablo_Icon.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -243,16 +160,12 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\MainPageIcon.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\Background2.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\AboutImage.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\MainPageBackground.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
@@ -267,22 +180,16 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Trash.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\Chiyome_Mochizuki.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\HikoOri.jpg" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\CT.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\CT.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Icons\Transformer.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
@@ -290,4 +197,40 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
   </Target>
+  <ItemGroup>
+    <ReferencePath Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\packages\ControlzEx.3.0.2.4\lib\net45\ControlzEx.dll" />
+    <ReferencePath Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\packages\MahApps.Metro.1.6.5\lib\net46\MahApps.Metro.dll" />
+    <ReferencePath Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\packages\MahApps.Metro.IconPacks.Entypo.2.2.0\lib\net46\MahApps.Metro.IconPacks.Entypo.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\Microsoft.CSharp.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\mscorlib.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\PresentationCore.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\PresentationFramework.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Core.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Data.DataSetExtensions.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Data.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Net.Http.dll" />
+    <ReferencePath Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\packages\ControlzEx.3.0.2.4\lib\net45\System.Windows.Interactivity.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Xaml.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Xml.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\System.Xml.Linq.dll" />
+    <ReferencePath Include="C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\WindowsBase.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\DatabaseView\BreakerPage.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\DatabaseView\CTPage.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\OnelineView\ButtonsPanel.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\OnelineView\ConnectorPropertyEditor.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\OnelineView\ParametersEditor.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\View\FaultView.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\View\MainWindowView.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\View\DatabaseView.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\DatabaseView\RelayPage.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\DatabaseView\SubstationPage.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\DatabaseView\TransformerPage.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\Pages\DatabaseView\TheveninPage.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\View\OnelineView.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\App.g.cs" />
+    <Compile Include="C:\Users\jason\OneDrive\Documents\Code\Substation Builder\Substation Builder\obj\Debug\GeneratedInternalTypeHelper.g.cs" />
+  </ItemGroup>
 </Project>
